# tap-db2

./: README.md  catalog.json  meltano.yml  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml
tap_db2/: __init__.py  client.py  connection.py  out.json  stream.py  streams.py  tap.py
tap_db2/sync_strategies/: common.py  full_table.py  incremental.py  logical.py
tap_db2/tests/: test_core.py
tap_mssql/: __init__.py
tap_mssql/sync_strategies/: common.py  full_table.py  logical.py
tests/: run_sql.py  test_core.py  utils.py
